k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: ingress-nginx
  labels:
    app: informirajse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: informirajse
      group: informirajse-app
  template:
    metadata:
      labels:
        app: informirajse
        group: informirajse-app
    spec:
      containers:
      - name: informirajse
        image: anthony70/informirajse-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: is-port
---
apiVersion: v1
kind: Service
metadata:
  name: is-service
  namespace: ingress-nginx
spec:
  selector:
    app: informirajse
    group: informirajse-app
  ports:
  - name: is-service-port
    protocol: TCP
    port: 443
    targetPort: is-port
