k8s/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: ingress-nginx
  labels:
    app: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
      group: informirajse-app
  template:
    metadata:
      labels:
        app: ui
        group: informirajse-app
    spec:
      containers:
      - name: ui
        image: anthony70/informirajse-app-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: ui-port

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: ingress-nginx
spec:
  selector:
    app: ui
    group: informirajse-app
  ports:
  - name: ui-service-port
    protocol: TCP
    port: 80
    targetPort: ui-port
